添加Score类。TODO: 在getScore里实现评估函数

--- a/Gobang.vcxproj.filters
+++ b/Gobang.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClInclude Include="Game.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="Score.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Gobang.cpp">
@@ -60,6 +63,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="Game.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="Score.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
