--- a/Gobang.vcxproj
+++ b/Gobang.vcxproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
@@ -183,23 +183,27 @@
     </ResourceCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="ChosePlace.h" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="Gobang.h" />
     <ClInclude Include="GobangDoc.h" />
     <ClInclude Include="GobangView.h" />
     <ClInclude Include="MainFrm.h" />
+    <ClInclude Include="Minimax.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="Score.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="ChosePlace.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="Gobang.cpp" />
     <ClCompile Include="GobangDoc.cpp" />
     <ClCompile Include="GobangView.cpp" />
     <ClCompile Include="MainFrm.cpp" />
+    <ClCompile Include="MiniMax.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
